# rust-learning-projects

./: .gitignore  README.md
beginner/exchange_rates/: Cargo.toml  secrets.json.example
beginner/exchange_rates/src/: main.rs
beginner/factorial/: Cargo.toml
beginner/factorial/src/: main.rs
beginner/fibonacci/: Cargo.toml
beginner/fibonacci/src/: main.rs
beginner/guessing_game/: Cargo.toml
beginner/guessing_game/src/: main.rs
beginner/random_function/: Cargo.toml
beginner/random_function/src/: main.rs
beginner/triangle/: Cargo.toml
beginner/triangle/src/: main.rs
