[package]
name = "exchange_rates"
version = "0.1.0"
authors = ["Tyler Park <tyler.park@fortemtech.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustop = "1.1.1"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.125"
serde_json = "1.0.59"
reqwest = { version = "0.11.3", features = ["blocking"] }